@@ -8,15 +8,17 @@ use File::Slurp::Tiny;
 
 my $filename = shift or die "No argument given";
 my $count = shift || 100;
+my $factor = 10;
 
 print "Slurping into a scalar\n";
-cmpthese($count, {
+cmpthese($count * $factor, {
 	'Slurp'      => sub { my $content = File::Slurp::read_file($filename) },
 	'Slurp-Tiny' => sub { my $content = File::Slurp::Tiny::read_file($filename) },
+	'Naive'       => sub { open my $fh, '<', $filename or die $!; my $content = do { local $/; <$fh> } },
 });
 
 print "\nSlurping into a scalarref\n";
-cmpthese($count, {
+cmpthese($count * $factor, {
 	'Slurp'      => sub { File::Slurp::read_file($filename, buffer_ref => \my $buffer) },
 	'Slurp-Tiny' => sub { File::Slurp::Tiny::read_file($filename, buffer_ref => \my $buffer) },
 });
@@ -37,11 +39,13 @@ print "\nSlurping into an array\n";
 cmpthese($count, {
 	'Slurp'       => sub { my @lines = File::Slurp::read_file($filename) },
 	'Slurp-Tiny'  => sub { my @lines = File::Slurp::Tiny::read_lines($filename) },
+	'Naive'       => sub { open my $fh, '<', $filename; my @lines = <$fh> },
 });
 
 print "\nSlurping into an array, chomped\n";
 cmpthese($count, {
 	'Slurp'       => sub { my @lines = File::Slurp::read_file($filename, chomp => 1) },
 	'Slurp-Tiny'  => sub { my @lines = File::Slurp::Tiny::read_lines($filename, chomp => 1) },
+	'Naive'       => sub { open my $fh, '<', $filename; my @lines = <$fh>; chomp @lines },
 });
 
